--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.3.1",
     "fastclick": "^1.0.6",
+    "install": "^0.13.0",
+    "npm": "^7.12.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^2.5.1",
     "swiper": "^5.4.5",
